# doodle

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  PLATFORMS  README  aclocal.m4  config.h.in  configure  configure.ac
debian/: changelog  control  copyright  doodle.cron.daily  doodle.default  doodle.dirs  doodle.docs  doodle.install  doodle.postinst  doodle.postrm  doodled.default  doodled.init  doodled.install  doodled.postinst  libdoodle-dev.install  libdoodle1.symbols  rules  watch
debian/patches/: 01-database-name.patch  02-gold.patch  03-fix-hyphen-used-as-minus-sign.patch  series
doc/: Makefile.am  Makefile.in
doc/man/: Makefile.am  Makefile.in  doodle.1  doodled.1  libdoodle.3
m4/: ChangeLog  Makefile.am  Makefile.in
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  de.gmo  de.po  doodle.pot  eu.gmo  eu.po  ga.gmo  ga.po  it.gmo  it.po  nl.gmo  nl.po  sq.gmo  sq.po  sv.gmo  sv.po  vi.gmo  vi.po
src/: Makefile.am  Makefile.in
src/doodle/: Makefile.am  Makefile.in  convert.c  convert.h  doodle.c  doodle.h  doodled.c  files.c  getopt.c  grow.c  help.c  helper1.h  helper2.h  index.c  logreplay.c  org_gnunet_doodle_Doodle.h  proftree.c  proftree2.c  proftree3.c  semaphore.c  semaphore.h  shutdown.c  shutdown.h  testio.c  testtree.c  testtree2.c  testtree3.c  testtree4.c  tree.c
src/org/gnunet/doodle/: Doodle.java
